--- a/waybar/style.css
+++ b/waybar/style.css
@@ -18,105 +18,68 @@ window#waybar.hidden {
 	margin-top: 6px;
 	padding-left: 10px;
 	padding-right: 10px;
-	border-radius: 10px;
+	border-radius: 5px;
 	transition: none;
     color: transparent;
 	background: transparent;
 }
-#tags {
-	margin-top: 6px;
-	margin-left: 12px;
-	font-size: 4px;
-	margin-bottom: 0px;
-	border-radius: 10px;
-	background: #161320;
+
+.modules-left,
+.modules-center,
+.modules-right{
+	padding: 5px;
+}
+
+#workspaces,#memory,#tray,#network,#pulseaudio,#cpu,#clock{
+	margin: 0px 3px;
+}
+
+#cpu{
+	margin-left: 0px;
+}
+#clock{
+	margin-right: 0px;
+}
+
+
+#workspaces{
+	color: #161320;
+	padding-left: 10px;
+	padding-right: 10px;
+	border-radius: 5px;
 	transition: none;
+	background: #C9CBFF;
 }
 
-#tags button {
-	transition: none;
-	color: #B5E8E0;
-	background: transparent;
-	font-size: 16px;
-	border-radius: 2px;
+#workspaces button {
+	color: #161320;
 }
 
-#tags button.occupied {
-	transition: none;
-	color: #F28FAD;
-	background: transparent;
-	font-size: 4px;
-}
+#workspaces button.active{
+	font-weight: bold;
+  }
 
-#tags button.focused {
-	color: #ABE9B3;
-    border-top: 2px solid #ABE9B3;
-    border-bottom: 2px solid #ABE9B3;
-}
-
-#tags button:hover {
-	transition: none;
-	box-shadow: inherit;
-	text-shadow: inherit;
-	color: #FAE3B0;
-    border-color: #E8A2AF;
-    color: #E8A2AF;
-}
-
-#tags button.focused:hover {
-    color: #E8A2AF;
-}
 
 #network {
-	margin-top: 6px;
-	margin-left: 8px;
 	padding-left: 10px;
 	padding-right: 10px;
 	margin-bottom: 0px;
-	border-radius: 10px;
+	border-radius: 5px;
 	transition: none;
 	color: #161320;
 	background: #bd93f9;
 }
 
 #pulseaudio {
-	margin-top: 6px;
-	margin-left: 8px;
 	padding-left: 10px;
 	padding-right: 10px;
 	margin-bottom: 0px;
-	border-radius: 10px;
+	border-radius: 5px;
 	transition: none;
 	color: #1A1826;
 	background: #FAE3B0;
 }
 
-#battery {
-	margin-top: 6px;
-	margin-left: 8px;
-	padding-left: 10px;
-	padding-right: 10px;
-	margin-bottom: 0px;
-	border-radius: 10px;
-	transition: none;
-	color: #161320;
-	background: #B5E8E0;
-}
-
-#battery.charging, #battery.plugged {
-	color: #161320;
-    background-color: #B5E8E0;
-}
-
-#battery.critical:not(.charging) {
-    background-color: #B5E8E0;
-    color: #161320;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-}
 
 @keyframes blink {
     to {
@@ -125,24 +88,12 @@ window#waybar.hidden {
     }
 }
 
-#backlight {
-	margin-top: 6px;
-	margin-left: 8px;
-	padding-left: 10px;
-	padding-right: 10px;
-	margin-bottom: 0px;
-	border-radius: 10px;
-	transition: none;
-	color: #161320;
-	background: #F8BD96;
-}
+
 #clock {
-	margin-top: 6px;
-	margin-left: 8px;
 	padding-left: 10px;
 	padding-right: 10px;
 	margin-bottom: 0px;
-	border-radius: 10px;
+	border-radius: 5px;
 	transition: none;
 	color: #161320;
 	background: #ABE9B3;
@@ -150,98 +101,33 @@ window#waybar.hidden {
 }
 
 #memory {
-	margin-top: 6px;
-	margin-left: 8px;
 	padding-left: 10px;
 	margin-bottom: 0px;
 	padding-right: 10px;
-	border-radius: 10px;
+	border-radius: 5px;
 	transition: none;
 	color: #161320;
 	background: #DDB6F2;
 }
+
+
+
 #cpu {
-	margin-top: 6px;
-	margin-left: 8px;
 	padding-left: 10px;
 	margin-bottom: 0px;
 	padding-right: 10px;
-	border-radius: 10px;
+	border-radius: 5px;
 	transition: none;
 	color: #161320;
 	background: #96CDFB;
 }
 
 #tray {
-	margin-top: 6px;
-	margin-left: 8px;
 	padding-left: 10px;
 	margin-bottom: 0px;
 	padding-right: 10px;
-	border-radius: 10px;
+	border-radius: 5px;
 	transition: none;
 	color: #B5E8E0;
 	background: #161320;
-}
-
-#custom-launcher {
-	font-size: 24px;
-	margin-top: 6px;
-	margin-left: 8px;
-	padding-left: 10px;
-	padding-right: 5px;
-	border-radius: 10px;
-	transition: none;
-    color: #89DCEB;
-    background: #161320;
-}
-
-#custom-power {
-	font-size: 20px;
-	margin-top: 6px;
-	margin-left: 8px;
-	margin-right: 8px;
-	padding-left: 10px;
-	padding-right: 5px;
-	margin-bottom: 0px;
-	border-radius: 10px;
-	transition: none;
-	color: #161320;
-	background: #F28FAD;
-}
-
-#custom-wallpaper {
-	margin-top: 6px;
-	margin-left: 8px;
-	padding-left: 10px;
-	padding-right: 10px;
-	margin-bottom: 0px;
-	border-radius: 10px;
-	transition: none;
-	color: #161320;
-	background: #C9CBFF;
-}
-
-#custom-updates {
-	margin-top: 6px;
-	margin-left: 8px;
-	padding-left: 10px;
-	padding-right: 10px;
-	margin-bottom: 0px;
-	border-radius: 10px;
-	transition: none;
-	color: #161320;
-	background: #E8A2AF;
-}
-
-#custom-media {
-	margin-top: 6px;
-	margin-left: 8px;
-	padding-left: 10px;
-	padding-right: 10px;
-	margin-bottom: 0px;
-	border-radius: 10px;
-	transition: none;
-	color: #161320;
-	background: #F2CDCD;
 }
