--- a/waybar/style.css
+++ b/waybar/style.css
@@ -30,7 +30,7 @@ window#waybar.hidden {
 	padding: 5px;
 }
 
-#workspaces,#memory,#tray,#network,#pulseaudio,#cpu,#clock{
+#workspaces,#memory,#tray,#network,#pulseaudio,#cpu,#clock,#custom-wallpaper{
 	margin: 0px 3px;
 }
 
@@ -59,6 +59,16 @@ window#waybar.hidden {
 	font-weight: bold;
   }
 
+
+#custom-wallpaper {
+	padding-left: 10px;
+	padding-right: 10px;
+	margin-bottom: 0px;
+	border-radius: 5px;
+	transition: none;
+	color: #161320;
+	background: #C9CBFF;
+}
 
 #network {
 	padding-left: 10px;
