--- a/wlogout/style.css
+++ b/wlogout/style.css
@@ -1,13 +1,9 @@
 @import '/home/jade/.cache/wal/colors-wlogout.css';
 
-/* -----------------------------------------------------
- * General 
- * ----------------------------------------------------- */
-
 * {
 	font-family: "Fira Sans Semibold", FontAwesome, Roboto, Helvetica, Arial, sans-serif;
 	background-image: none;
-	transition: 20ms;
+	transition:10ms;
 }
 
 window {
@@ -24,7 +20,7 @@ button {
 
 	border-style: solid;
 	background-color: rgba(12, 12, 12, 0.3);
-	border: 3px solid #FFFFFF;
+	border: 2px solid #FFFFFF;
 
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -33,8 +29,8 @@ button:focus,
 button:active,
 button:hover {
 	color: @color11;
-	background-color: rgba(12, 12, 12, 0.5);
-	border: 3px solid @color11;
+	background-color: rgba(12, 12, 12, 0.2);
+	border: 2px solid @color11;
 }
 
 /* 
@@ -43,38 +39,37 @@ Buttons
 ----------------------------------------------------- 
 */
 
+#lock,
+#logout,
+#suspend ,
+#hibernate,
+#shutdown,
+#reboot {
+	margin: 5px;
+	border-radius: 10px;
+}
+
+
 #lock {
-	margin: 10px;
-	border-radius: 20px;
 	background-image: image(url("icons/lock.png"));
 }
 
 #logout {
-	margin: 10px;
-	border-radius: 20px;
 	background-image: image(url("icons/logout.png"));
 }
 
 #suspend {
-	margin: 10px;
-	border-radius: 20px;
 	background-image: image(url("icons/suspend.png"));
 }
 
 #hibernate {
-	margin: 10px;
-	border-radius: 20px;
 	background-image: image(url("icons/hibernate.png"));
 }
 
 #shutdown {
-	margin: 10px;
-	border-radius: 20px;
 	background-image: image(url("icons/shutdown.png"));
 }
 
 #reboot {
-	margin: 10px;
-	border-radius: 20px;
 	background-image: image(url("icons/reboot.png"));
 }
